<resources>
    <string name="app_name">MENU DE TECNICOS</string>
    <string name="textview">TextView</string>
    <string name="menu_tecnicos">MENU TECNICOS</string>
    <string name="MENU2">MENU DE SECRETARIAS</string>
    <string name="MENU3">MENU DE CLIENTE</string>
    <string name="button">Button</string>


    <string name="password">Password</string>
    <string name="usuario">Usuario</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>

    <string name="registro">Registro</string>
    <string name="acceder">ACCEDER</string>


    <string name="necesitas_contactarnos_da_click_aqui">¿Necesitas contactarnos? Da click aqui!</string>
    <string name="title_activity_log">log</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_lista">lista</string>
    <string name="eliminar">Eliminar</string>
    <string name="Escriba_el_nombre_para_comentario">Escriba el nombre del Comentario</string>
    <string name="bitacora_del_tecnico">BITACORA DEL TECNICO.</string>

    <string name="escriba_su_comentario">Escriba su comentario </string>
    <string name="ver_comentario">Ver comentario</string>
    <string name="ver">Ver</string>
    <string name="crear">Crear</string>
    <string name="button1">Cancelar</string>
    <string name="button2">Aceptar</string>
    <string name="textview2">Ingresa una contraseña:</string>
    <string name="textview3">Confirma contraseña:</string>
    <string name="textview4"></string>
    <string name="ingresar_contraseña">INGRESAR CONTRASEÑA.</string>
</resources>

