<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/correoLogin"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="305dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#C4C8E6"
        android:textColorHint="#C4C8E6"
        android:textCursorDrawable="@android:color/background_light"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/contraLogin"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="233dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_con"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#C4C8E6"
        android:textColorHint="#C4C8E6"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="347dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="385dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/byw" />

    <LinearLayout
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="136dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/accederLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/acceder"


            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="@string/necesitas_contactarnos_da_click_aqui"
        android:textColor="#C4C8E6"
        android:textSize="18sp" />

</RelativeLayout>